fixed the sizing of the input box for the game time page. All but the info page looks too small on the phone screen porportions and I don't know how to fix that yet.

--- a/GameTimeStyle.css
+++ b/GameTimeStyle.css
@@ -12,6 +12,10 @@ body{
     font-size: 5vw;
     text-align: center;
 }
+input[type="search"]{
+    width: 40vw;
+    height: 3vw;
+}
 .clock{
     font-size: 10vw;
     border: 9px solid aquamarine;
